--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,14 @@ services:
     image: grafana/alloy:latest
     ports:
       - "12345:12345"
+    volumes:
+      - ./config.alloy:/etc/alloy/config.alloy
+      - /:/rootfs:ro
+      - /var/run/docker.sock:/var/run/docker.sock:rw
+      - /proc:/host/proc:ro
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+      - /dev/disk/:/dev/disk:ro
 
   cadvisor:
     image: gcr.io/cadvisor/cadvisor
