--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - /var/lib/docker/:/var/lib/docker:ro
       - /dev/disk/:/dev/disk:ro
 
-  cadvisor:
-    image: gcr.io/cadvisor/cadvisor
-    ports:
-      - "8080:8080"
+  # cadvisor:
+  #   image: gcr.io/cadvisor/cadvisor
+  #   ports:
+  #     - "8080:8080"
